# tantivy-macro

./: Cargo.toml  README.md
src/: lib.rs
